<resources>
    <string name="app_name">汽车振动诊断 v1.0</string>
    <string name="title_home">行驶抖动</string>
    <string name="title_dashboard">怠速抖动</string>
    <string name="title_notifications">关于</string>
    <string name="next_step">下一步</string>
    <string name="basic_info">基本信息</string>
    <string name="problem_speed">问题车速</string>
    <string name="wheel_r">车轮半径</string>
    <string name="rear_axle_t_ratio">后桥传动比</string>
    <string name="title_activity_run_collect">数据采集</string>
    <string name="collect_introduce">点击绿色按钮采集</string>
    <string name="collect_speed_1">Speed 30km/h</string>
    <string name="collect_speed_2">Speed 40km/h</string>
    <string name="collect_speed_3">Speed 70km/h</string>
    <string name="collecting">采集中</string>
    <string name="collect_finished">采集完毕</string>
    <string name="collect_finished_toast">已采集完毕，长按重新采集。</string>
    <drawable name="clr_normal">#fc1de192</drawable>
    <drawable name="clr_collecting">#df8a13</drawable>
    <drawable name="clr_finished">#d1cfce</drawable>
</resources>
