<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RunCollectActivity"
    tools:showIn="@layout/activity_run_collect">
    <Button
        android:id="@+id/collect_speed_1"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/collect_speed_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/collect_speed_2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/collect_speed_2"
        app:layout_constraintTop_toBottomOf="@+id/collect_speed_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/collect_speed_3"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/collect_speed_2"
        android:text="@string/collect_speed_3" />

</android.support.constraint.ConstraintLayout>